--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-1.02MB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇷🇺 俄罗斯联邦-359.5KB/s(Youtube:不良林), server: 213.183.53.202, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: 38.68.134.71, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.88MB/s(Youtube:不良林), server: 38.68.135.19, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林), server: 185.167.116.24, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2, server: 185.167.116.24, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3, server: 185.167.116.24, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
+  - {name: 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林), server: 213.183.53.207, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
+  - {name: 🇨🇳 台湾-2.81MB/s(Youtube:不良林), server: 0319tw05.fans8.xyz, port: 443, type: trojan, password: c6799a1d-4a74-4683-919f-98b0a5046591, sni: 0319tw05.fans8.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-13.17MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
   - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: hk01.bosaidong.buzz, port: 444, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk01.bosaidong.buzz}}
   - {name: 🇺🇸 美国-10.87MB/s(Youtube:不良林), server: 20.222.106.239, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.106.239}}
   - {name: 🇺🇸 美国-10.65MB/s(Youtube:不良林), server: 20.243.69.62, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.69.62}}
-  - {name: 🇺🇸 美国-11.94MB/s(Youtube:不良林), server: 20.243.71.225, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.71.225}}
+  - {name: 🇺🇸 美国-14.88MB/s(Youtube:不良林), server: 20.243.71.225, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.71.225}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-1.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-1.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-1.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-1.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-1.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-1.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-1.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
