--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林), server: 185.167.116.24, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2, server: 185.167.116.24, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3, server: 185.167.116.24, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
-  - {name: 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林), server: 213.183.53.207, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
-  - {name: 🇨🇳 台湾-2.81MB/s(Youtube:不良林), server: 0319tw05.fans8.xyz, port: 443, type: trojan, password: c6799a1d-4a74-4683-919f-98b0a5046591, sni: 0319tw05.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-481.1KB/s(Youtube:不良林), server: 213.183.53.207, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林), server: 185.167.116.24, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇸🇬 新加坡-2.12MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-2.65MB/s(Youtube:不良林), server: 213.183.59.218, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇺🇸 美国-13.17MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
-  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: hk01.bosaidong.buzz, port: 444, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk01.bosaidong.buzz}}
+  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: hk01.bosaidong.buzz, port: 444, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk01.bosaidong.buzz}}
   - {name: 🇺🇸 美国-10.87MB/s(Youtube:不良林), server: 20.222.106.239, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.106.239}}
   - {name: 🇺🇸 美国-10.65MB/s(Youtube:不良林), server: 20.243.69.62, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.69.62}}
   - {name: 🇺🇸 美国-14.88MB/s(Youtube:不良林), server: 20.243.71.225, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.71.225}}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
@@ -66,20 +66,19 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
@@ -88,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
@@ -104,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
@@ -129,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林) 3
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-481.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-14.88MB/s(Youtube:不良林)
